<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NotifyGlance</string>
    <string name="settings_title">Settings</string>
    <string name="diagnostics_title">Diagnostics</string>
    <string name="notification_service_label">NotifyGlance Notification Reader</string>
    <string name="allowed_apps_title">Allowed Apps</string>
    <string name="allowed_apps_search_hint">Search apps</string>
    <string name="allowed_apps_summary_default">Select apps to show</string>
    <string name="allowed_apps_summary_all_enabled">All apps enabled</string>
    <string name="allowed_apps_summary_count">%1$d of %2$d apps enabled</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enable_all">Enable All</string>
    <string name="disable_all">Disable All</string>

    <!-- Timed session options -->
    <string-array name="timed_session_labels">
        <item>Off</item>
        <item>Every Minute</item>
        <item>Every 5 Minutes</item>
        <item>Every 10 Minutes</item>
        <item>Every 15 Minutes</item>
        <item>Every 20 Minutes</item>
        <item>Every 30 Minutes</item>
        <item>Every Hour</item>
    </string-array>
    <string-array name="timed_session_values">
        <item>off</item>
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <!-- Max cards -->
    <string-array name="max_cards_labels">
        <item>5</item>
        <item>10</item>
        <item>50</item>
        <item>Unlimited</item>
    </string-array>
    <string-array name="max_cards_values">
        <item>5</item>
        <item>10</item>
        <item>50</item>
        <item>-1</item>
    </string-array>

    <!-- Card display seconds -->
    <string-array name="card_sec_labels">
        <item>3 seconds</item>
        <item>4.5 seconds</item>
        <item>5 seconds</item>
        <item>6 seconds</item>
        <item>7 seconds</item>
    </string-array>
    <string-array name="card_sec_values">
        <item>3</item>
        <item>4.5</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <!-- Font sizes -->
    <string-array name="font_size_labels">
        <item>Large (16sp)</item>
        <item>XL (20sp)</item>
        <item>XXL (24sp)</item>
    </string-array>
    <string-array name="font_size_values">
        <item>large</item>
        <item>xl</item>
        <item>xxl</item>
    </string-array>

    <!-- Empty placeholder -->
    <string-array name="empty_array"/>
</resources>
